# Exelixi

./: .gitignore  Bench.txt  Cargo.toml  LICENSE.txt  README.md  TODO
.cargo/: config  config.toml
configs/: Birth.ron  HerbivoreCarnivoreFullEye.ron  RockPaperScissor.ron  bench_A.ron  bench_B.ron  bench_C.ron  bench_D.ron  default.ron
crates/brain/: Cargo.toml
crates/brain/src/: lib.rs
crates/genetic-algorithm/: Cargo.toml
crates/genetic-algorithm/src/: lib.rs
crates/neural-network/: Cargo.toml
crates/simulation/: Cargo.toml
crates/simulation-bevy/: Cargo.toml
crates/simulation-bevy/assets/: bird.kra  food.kra
crates/simulation-bevy/src/: components.rs  eye.rs  main.rs  spawner.rs
crates/simulation-bevy/src/systems/: collision.rs  evolve.rs  mod.rs  movement.rs  simulation_step.rs  ui.rs
crates/simulation-wasm/: Cargo.toml
crates/simulation-wasm/src/: lib.rs
crates/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
exelixi/: Cargo.toml
exelixi/assets/: bird.kra  food.kra  fov_viewer.wgsl
exelixi/src/: animal_individual.rs  brain.rs  components.rs  eye.rs  main.rs  simulation.rs  spawner.rs
exelixi/src/animal/: body.rs  brain.rs  eye.rs  individual.rs  locomotion.rs  mod.rs  spawner.rs
exelixi/src/camera/: mod.rs
exelixi/src/ecosystem/: components.rs  config.rs  control.rs  food.rs  kdtree.rs  load.rs  mod.rs  position.rs  runtime.rs  save.rs  schedule.rs  spawner.rs  stats.rs
exelixi/src/ecosystem/config/: ecosystem.rs  environment.rs  mod.rs  organism.rs  organs.rs  reproduction.rs  species.rs  visualization.rs
exelixi/src/ecosystem/organism/: body.rs  brain.rs  evolve.rs  eye.rs  individual.rs  kind.rs  lifecycle.rs  mod.rs  spawn.rs  spawner.rs
exelixi/src/ecosystem/organism/organs/: body.rs  brain.rs  eye.rs  leaf.rs  locomotion.rs  mod.rs  mouth.rs  uterus.rs
exelixi/src/ecosystem/organism/organs/traits/: brain.rs  energy.rs  mod.rs
exelixi/src/ecosystem/organism/parts/: body.rs  brain.rs  eye.rs  locomotion.rs  mod.rs  mouth.rs
exelixi/src/ecosystem/organism/reproduction/: autospawn.rs  birth.rs  endofgeneration.rs  generation.rs  individual.rs  mod.rs
exelixi/src/ecosystem/systems/: brain.rs  collision.rs  environment.rs  evolve.rs  mod.rs  movement.rs
exelixi/src/organism/: body.rs  brain.rs  eye.rs  individual.rs  locomotion.rs  mod.rs  position.rs  spawner.rs
exelixi/src/simulation/: config.rs  control.rs  default_config.ron  mod.rs  stats.rs
exelixi/src/simulation/systems/: brain.rs  collision.rs  decay.rs  energy.rs  environment.rs  evolve.rs  mod.rs  movement.rs
exelixi/src/systems/: brain.rs  collision.rs  config_update.rs  decay.rs  evolve.rs  food.rs  mod.rs  movement.rs  ui.rs
exelixi/src/ui/: eye_viewer.rs  fov_viewer.rs  mod.rs  panels.rs  selection.rs  user_selection.rs
exelixi/src/visualization/: floor.rs  mod.rs  organism.rs
exelixi/src/visualization/camera/: mod.rs
exelixi/src/visualization/ui/: control.rs  eye_viewer.rs  mod.rs  mouth_viewer.rs  panels.rs  selection.rs  user_selection.rs
exelixi/src/visualization/ui/panels/: mod.rs  selection.rs  simulation.rs  status_bar.rs
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
tests/: bench.sh  check_reproductibility.sh  configs.sh  simple.sh
wasm-crates/simulation-wasm/: Cargo.toml
wasm-crates/simulation-wasm/src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json
