[package]
name = "exelixi"
version = "0.1.0"
edition = "2021"
authors = [ "Boris Boutillier [boris.boutillier@gmail.com]" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bevy = "0.6"
bevy_egui = "0.10"
lib-neural-network = { path = "../libs/neural-network" }
lib-genetic-algorithm = { path = "../libs/genetic-algorithm" }