[package]
name = "exelixi"
version = "0.1.0"
authors = [ "Boris Boutillier <boris.boutillier@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3"
bevy = "0.10"
bevy_egui = "0.20"
lib-neural-network = { path = "../libs/neural-network" }
lib-genetic-algorithm = { path = "../libs/genetic-algorithm" }
ron = "0.7"
serde = { version = "1", features = ["derive"] }
dirs = "4.0"
clap = { version = "4.1.4", features = ["derive"] }
# leafwing-input-manager = "0.8.0"
leafwing-input-manager = { git = "https://github.com/TimJentzsch/leafwing-input-manager" , branch = "bevy-0.10" }
