[package]
name = "simulation-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
#bevy = { path = "/home/boris/work/rust/gits/bevy"}
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-main"}
neural-network = { path = "../neural-network" }
genetic-algorithm = { path = "../genetic-algorithm" }

[dev-dependencies]
rand_chacha = "0.3"
