[package]
name = "lib-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.26", features = ["rand-no-std"] }
rand = "0.8"
neural-network = { path = "../neural-network" }
genetic-algorithm = { path = "../genetic-algorithm" }

[dev-dependencies]
rand_chacha = "0.3"
