[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
lib-simulation = { path = "../simulation"}
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[lib]
crate-type = ["cdylib"]